Test "multiple skills must be met" constraint.